# fwupd-efi

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  RELEASE  SECURITY.md  meson.build  meson_options.txt
.github/workflows/: main.yml  scorecard.yml
contrib/: ci.sh  fwupd-efi.spec.in  org.freedesktop.fwupd.efi.metainfo.xml  reformat-code.py  setup
contrib/debian/: control  copyright  fwupd-unsigned-dev.install  fwupd-unsigned.install  rules  watch
contrib/debian/signing-template/: control
contrib/debian/source/: lintian-overrides
efi/: fwupdate.c  generate_binary.py  generate_sbat.py  meson.build  sbom.cdx.json  swid.xml.in
efi/crt0/: crt0-efi-aarch64.S  crt0-efi-arm.S  crt0-efi-loongarch64.S  crt0-efi-riscv64.S  meson.build
efi/lds/: elf_aarch64_efi.lds  elf_aarch64_efi_system.lds  elf_arm_efi.lds  elf_ia32_efi.lds  elf_loongarch64_efi.lds  elf_riscv64_efi.lds  elf_riscv64_efi_system.lds  elf_x86_64_efi.lds
